Version 8b

--Added a robot-player mode for testing.

--Fixed crash on pause after picking up a token that was recently entered 
  (thanks Rico).




Version 8   2011-February-4

--Changed to draw bullet for one final frame after it does damage to something,
  and to force-fade-in a damaging bullet that is partially faded out.

--Made bullets impotent during last half of their final fade-out.

--Improved appearance of bullet intersections with walls.

--Improved appearance of bullet explosions.

--Fixed crash triggered by power-up probability distributions around level 0.

--Fixed aspect ratio bug that could cause resolution SMALLER than 640x480 to
  be picked.

--Added an always-safe, enemy-free buffer at level 0 (regardless of difficulty 
  modifier) to ensure that player does not get knocked down into the inverted 
  negative levels by accident.

--Changed to give player a partial difficulty break on knock-down when a 
  difficulty modifier is in effect (so that getting knocked down inside a hard 
  power-up sub-level isn't fatal).

--Saved level bookmark never saves for negative levels, so player cannot be 
  trapped in the inverted negative difficulty progression after quitting.

--Switch to SPACE as shooting alternative for trackpad users, and SHIFT to 
  enter things.

--Disabled entering immediately after entering something, to avoid double-enter
  confusion.

--Improved bounce as a stand-alone power-up by renewing bullet distance limit 
  after each bounce (thanks Rico).

--Corrected implementation of A* pathfinding, and improved its efficiency.

--Fixed a memory leak in the power set tip display.




Version 7    2011-February-2

--Fixed so that multiple paragraph separators are not inserted when player
  closes pause screen without typing anything.

--Added extra tutorial message explaining entering sub-tokens.

--Changed so that first sub-level inside tokens has level-1 tokens on floor.
